deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-server
  namespace: bill-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-server
  template:
    metadata:
      labels:
        app: ingress-server
    spec:
      containers:
      - name: ingress-server-container
        image: BillTestContainerRegistry.azurecr.io/ingress-server:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
