service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api-server-service
spec:
  selector:
    app: flask-api-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
